[project]
name = "stream-utils"
version = "0.1.0"
description = "Shared helpers for the streamer-tools sibling projects"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Yaroslav Bondarev", email = "yaroslav@korchagin.me" },
]
dependencies = [
    "httpx>=0.27",
    "pydantic-settings>=2.5",
    "platformdirs>=4.3",
    "loguru>=0.7",
    "openai>=1.50",
    "anthropic>=0.40",
    "faster-whisper>=1.0",
    "ffmpeg-python>=0.2",
    "twitchio>=2.10",
    "python-telegram-bot>=21.5",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stream_utils"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
files = ["src/stream_utils/core"]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["faster_whisper", "faster_whisper.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
